--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Pajaro Loco se va de campamento -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El ultimo disparo -->
+<li>
+  <a href="../Peliculas/movie155.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/i6ZO28AmFatUHKwW3LYzBsJvUSs.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El ultimo disparo 2023</span>
+    <span class="hidden">Al regresar de Afganistán, Jessica, una marine de Spec OPS, se encuentra en una guerra que nunca imaginó y descubre que los suburbios del centro de Estados Unidos han cambiado cuando su hermana de trece años, Aimee, es secuestrada por traficantes sexuales.</span>
+  </a>
+</li>
+<!--FIN--><!-- El Pajaro Loco se va de campamento -->
 <li>
   <a href="../Peliculas/movie154.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
