--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El ultimo disparo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Anaconda 2: En busca de la orquidea sangrienta -->
+<li>
+  <a href="../Peliculas/movie156.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/sO7PK08LkIXluGjqFvvU1jWjmVV.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Anaconda 2: En busca de la orquídea sangrienta 2004</span>
+    <span class="hidden">La orquídea sangrienta: una flor rara que guarda el secreto de la vida eterna y una fortuna para la compañía farmacéutica que la encuentra. Dirigido por un soldado de fortuna con dos puños, se envía una expedición científica a las selvas de Borneo para localizar y traer muestras de la legendaria planta. Luchando río arriba, los exploradores se enfrentan a valientes insectos venenosos, cocodrilos feroces y cazadores de cabezas salvajes, sin darse cuenta de que los acecha un peligro aún mayor: un nido de anacondas gigantes, voraces comedores de carne de cincuenta pies de largo que se detendrán nada para proteger su caldo de cultivo, el hogar de las orquídeas de sangre.</span>
+  </a>
+</li>
+<!--FIN--><!-- El ultimo disparo -->
 <li>
   <a href="../Peliculas/movie155.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
