--- a/Categorias/terror/index.html
+++ b/Categorias/terror/index.html
@@ -77,7 +77,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Anaconda 2: En busca de la orquidea sangrienta -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Baby Blue -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie157.html">
+    <img src="https://image.tmdb.org/t/p/original/z1BrCBJgG0VvehXHiIgxDrjNBhG.jpg" alt="Baby Blue" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Baby Blue</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Anaconda 2: En busca de la orquidea sangrienta -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie156.html">
     <img src="https://image.tmdb.org/t/p/original/sO7PK08LkIXluGjqFvvU1jWjmVV.jpg" alt="Anaconda 2: En busca de la orquídea sangrienta" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
