--- a/Plataforma/anime/index.html
+++ b/Plataforma/anime/index.html
@@ -52,7 +52,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
   <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-    <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Hiroshima -->
+    <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Attack on Titan: EL ATAQUE FINAL -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie158.html">
+    <img src="https://image.tmdb.org/t/p/original/2vKweKp6Nynd4kBiKhOGyP0iSdO.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Attack on Titan: EL ATAQUE FINAL</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Hiroshima -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie97.html">
     <img src="https://image.tmdb.org/t/p/original/t2FOHUskwxmdAQerqvijUlpeZ1N.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
