--- a/Plataforma/warnerbros/index.html
+++ b/Plataforma/warnerbros/index.html
@@ -216,7 +216,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Tom y Jerry -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Amarga pesadilla -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie162.html">
+    <img src="https://image.tmdb.org/t/p/original/e1bVo5ehfvRDBh4IulHzmVXfVCh.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Amarga pesadilla</div>
+  <div class="text-xs text-white/70">1972</div>
+</article><!-- Tom y Jerry -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie140.html">
     <img src="https://image.tmdb.org/t/p/original/orzPlWUbf0S5HeWmpP3TeHvduwn.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
