--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Viaje 2: La Isla Misteriosa -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mulan: Ascenso de una guerrera -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie165.html">
+    <img src="https://image.tmdb.org/t/p/original/b6YT5hWAbjJDRlrwodeTGPoaV3O.jpg" alt="Mulan: Ascenso de una guerrera" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Mulan: Ascenso de una guerrera</div>
+  <div class="text-xs text-white/70">2009</div>
+</article><!-- Viaje 2: La Isla Misteriosa -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie164.html">
     <img src="https://image.tmdb.org/t/p/original/hAy2yUav8QPnDzfOGihNI527NjY.jpg" alt="Viaje 2: La Isla Misteriosa" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
