--- a/Categorias/drama/index.html
+++ b/Categorias/drama/index.html
@@ -48,7 +48,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Amarga pesadilla -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mulan: Ascenso de una guerrera -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie165.html">
+    <img src="https://image.tmdb.org/t/p/original/b6YT5hWAbjJDRlrwodeTGPoaV3O.jpg" alt="Mulan: Ascenso de una guerrera" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Mulan: Ascenso de una guerrera</div>
+  <div class="text-xs text-white/70">2009</div>
+</article><!-- Amarga pesadilla -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie162.html">
     <img src="https://image.tmdb.org/t/p/original/e1bVo5ehfvRDBh4IulHzmVXfVCh.jpg" alt="Amarga pesadilla" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
