--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Viaje al centro de la Tierra -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Batman -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie166.html">
+    <img src="https://image.tmdb.org/t/p/original/zzoPxWHnPa0eyfkMLgwbNvdEcVF.jpg" alt="Batman" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Batman</div>
+  <div class="text-xs text-white/70">1966</div>
+</article><!-- Viaje al centro de la Tierra -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie163.html">
     <img src="https://image.tmdb.org/t/p/original/uWWKeB6iPtn5PIckZK0L4yw3Fg2.jpg" alt="Viaje al centro de la Tierra" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
