--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mulan: Ascenso de una guerrera -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Batman -->
+<li>
+  <a href="../Peliculas/movie166.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zzoPxWHnPa0eyfkMLgwbNvdEcVF.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Batman 1966</span>
+    <span class="hidden">Adaptación a la gran pantalla del popular cómic de Bob Kane, que ese mismo año y con los mismos protagonistas conocía una exitosa versión en formato de serie de televisión que duraría dos años en la pequeña pantalla. Batman y Robin se enfrentan a un grupo de criminales entre los que se encuentran sus eternos rivales Joker y El Pingüino, quienes se han apoderado de un sofisticado artilugio para dominar el mundo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mulan: Ascenso de una guerrera -->
 <li>
   <a href="../Peliculas/movie165.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
